actions and destinations have be re-hard coded as the global destitnations caused serious errors in almost every file. current error - navigation wont except the java files as fragments. background.mp3 is added but background music (myMediaSessionService) has been postponed. contact me for more details - Alexis
Signed-off-by: Alexis <ambrizlex@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DnD5eManager"
         tools:targetApi="31">
+        <service
+            android:name=".myMediaSessionService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowser"/>
+            </intent-filter>
+        </service>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -20,6 +27,7 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
     </application>
