--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,15 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:mimeType="application/cah"
-                    tools:ignore="AppLinkUrlError" />
-                <data android:mimeType="*/*"/>
-                <data android:pathPattern=".*\\.cah" />
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.VIEW" />-->
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--                <category android:name="android.intent.category.BROWSABLE" />-->
+<!--                <data android:mimeType="application/cah"-->
+<!--                    tools:ignore="AppLinkUrlError" />-->
+<!--                <data android:mimeType="*/*"/>-->
+<!--                <data android:pathPattern=".*\\.cah" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
